--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,14 +1,14 @@
-# Maintainer: tkit <ch1994@outlook.com>
-pkgname=code-nautilus-git
+# Maintainer: web6 <contact@web6.fr>
+pkgname=code-insiders-nautilus-git
 pkgver=r9.ddff975
 pkgrel=2
-pkgdesc="VSCode extension for Nautilus"
+pkgdesc="VSCode Insiders extension for Nautilus"
 arch=('i686' 'x86_64')
-url="https://github.com/cra0zy/code-nautilus"
+url="https://github.com/web6-fr/code-insiders-nautilus"
 license=('custom')
 depends=('python-nautilus')
 makedepends=('git')
-optdepends=('code: The Visual Studio Code (vscode) editor')
+optdepends=('code-insiders: The Visual Studio Code Insiders (vscode-insiders) editor')
 install="${pkgname}.install"
 source=("${pkgname}::git+${url}.git")
 md5sums=('SKIP')
@@ -23,6 +23,6 @@ pkgver() {
 
 package() {
     cd "$pkgname"
-    install -Dm755 code-nautilus.py "$pkgdir/usr/share/nautilus-python/extensions/code-nautilus.py"
+    install -Dm755 code-nautilus.py "$pkgdir/usr/share/nautilus-python/extensions/code-insiders-nautilus.py"
     install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
 }
